# dotfiles

./: .gitconfig  Cargo.toml  LICENSE  bootstrap  decrypt.sh  encrypt.sh
.aws/: config  credentials.rage
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
.gpg/: private.gpg.rage
config/: .gitconfig  github_token.rage
nix/: secret-key.rage
repo-setup/bellroy/: haskell.sh
src/: dotfile.rs  lib.rs  nix.rs  personal_nix_cache.rs  secret.rs  targets.rs  vars.rs
src/dotfile/: nix_conf.rs  unstructured.rs
src/targets/: aws.rs  git.rs  personal_nix_cache.rs
