[package]
name = "dotfiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "decrypt"
path = "src/bin/decrypt.rs"

[[bin]]
name = "encrypt"
path = "src/bin/encrypt.rs"

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[dependencies]
anyhow = "1.0.75"
age = { version = "0.9.2", features = ["ssh"] }
itertools = "0.12"
dirs = "5.0.1"
