[package]
name = "dotfiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[dependencies]
anyhow = "1.0.75"
age = { version = "0.9.2", features = ["ssh"] }
itertools = "0.12"
dirs = "5.0.1"
clap = { version = "4.4.8", features = ["derive"] }
thiserror = "1.0.50"
pathbuf = "0.3.1"
base64 = "0.21.5"
